--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,49 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.09.2022 13:38:28</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 09.09.2022 14:26:00</small><table >
+<tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
+<tr>
+<td>
+<div class="containerPriceList">
+<span class="line"></span>
+<h5>Pátek, 09. 09. 2022</h5>
+<span class="line"></span>
+<p>
+<strong>Polévka ze zeleného kari</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							35,-
+						</span>
+</p>
+<p>
+<strong>Vepřová plec se žampionovou omáčkou a rýží NEBO těstovinou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							145,-
+						</span>
+</p>
+<p>
+<strong>Míchaný salát s kuřecím masem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							143,-
+						</span>
+</p>
+<p>
+<strong>TEPLÝ BUFET: barbecue kuřecí stehynka, ryze, Okouník se slaninou a žampiony, pečeně brambory, zelenina</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							44,-
+						</span>
+</p>
+<p>
+<strong>SALÁTY: rajčatový s paprikovým dresinkem, okurkový</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							40,-
+						</span>
+</p>
+</div>
+</td>
+</tr>
 <table>
 <tr><th>KUTA<br><a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a></th></tr>
 <tr>
@@ -69,10 +114,7 @@
 <td>
 <div class="row denni-menu" style="max-width:570px; margin:auto; margin-top:70px;"><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure>
 <script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
-  position: relative;
-  top: -100px; 
-  visibility: hidden;"></a><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script></div></div>
+<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div></div>
 </td>
 </tr>
 </table>
