--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.09.2022 15:13:34</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 17.09.2022 07:34:55</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Pátek, 16. 09. 2022</h5>
+<h5>Sobota, 17. 09. 2022</h5>
 <span class="line"></span>
 <p>
 <strong>Zeleninová s kari</strong>
@@ -50,54 +50,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Pátek 16.9.2022</div>
+<div class="nadpis">Sobota 17.9.2022</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Brownie  (bez lepku) </div>
-<div class="cena">65 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Čokoládový puding s quinoou  (bez lepku, bez laktózy) </div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Ovocný salát</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Variace bavorských baget </div>
-<div class="cena">69 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Dýňový krém v menu  <em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Dýňový krém samostatně <em title="Celer">9</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Chilli con carne, zakysaná smetana, koriandr, basmati rýže <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">165 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>350g Koprová omáčka, vajíčko, grenaillle <em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">165 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>150g Cassoulet s vepřovou krkovicí a grilovanou klobásou, kořenová zelenina, fazole, tarhoňa, bylinky <em title="Obiloviny obsahující lepek">1</em></div>
-<div class="cena">165 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
 </td>
 </tr>
@@ -108,13 +63,16 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  </td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s houbami</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">180g Medailonky z mletého masa v bramboráku, salát coleslav</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bratislavská hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Zapečené šunkofleky se smetanou a vejci, kyselá okurka</td><td class="menuPrice">141,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený řízek z kuřecích prsou v cornflakes, bramborový salát, citron</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">170g</td><td class="menuName">Špíz z vepřové pečeně, papriky, klobásy a cibule na roštu, mačkané brambory s cibulkou, hořčice, beraní roh</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: Do růžova pečená vepřová panenka na fazolových luscích s anglickou slaninou, celerové hranolky, zakysaná smetana</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine se smetanovou omáčkou, kukuřicí, šunkou a pórkem, 150g filírovaná kuřecí prsa, rukola</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné pepřová omáčce, špecle</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight">600g</td><td class="menuName">Pečené vepřové koleno ve vlastní šťávě, beraní roh, cibule, hořčice, křen, grilované brambory</td><td class="menuPrice">168,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený olivovým olejem, 150g kuřecí nudličky na grilu, vařené vejce</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilkový pudink s lesním ovocem a šlehačkou</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">bezlep kový</td><td class="menuName">Pečený čokoládový dort s mákem (90% čokoláda), omáčka z lesního ovoce, šlehačka  (bezlepkový) </td><td class="menuPrice">69,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špenátový krém se zakysanou smetanou, tortillový chips</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5l</td><td class="menuName">Arnoštova hořká 10° alk. 4,3% - pivovar Pardubice</td><td class="menuPrice">38,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Tanková 11° alk. 4,7% - pivovar Staropramen</td><td class="menuPrice">43,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">BOHEMIAN LAGER 11° alk. 4,4% - Pivovar Libertas</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Smažené řízky z kuřecích prsou obalené v cornflakes a z vepřové pečeně obalené ve strouhance, bramborová kaše s máslem, citron</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí prsa na houbách, dušená rýže pečená s hřebíčkem</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra na roštu, hranolky, tatarka</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka na jemné smetanové omáčce se šunkou a sušenými tomaty, sýrové grusetky promíchané anglickou slaninou a restovanou červenou paprikou</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněné bramborové knedlíky s mletým masem, dušené červené zelí, škvarky s cibuli</td><td class="menuPrice">144,-</td></tr><tr><td class="menuWeight">170g</td><td class="menuName">Kapsa z vepřové pečeně plněná anglickou slaninou, sušenými rajčaty a vejci na roštu, mačkané brambory s cibulí</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight">180g</td><td class="menuName">Mix gril - vepřové karé, kuřecí prsa, vepřová panenka, pečená celá brambora s česnekovým dresinkem, smetanová omáčka z nakládaného zeleného pepře, volské oko</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny promíchaný olivo-citronovým dresinkem, řezy z vepřové panenky, vařené vejce</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít své slevy na: 150g Smažený řízek a 150g Steak z kuřecích prsou za 125,- (pro nesledující za 164,-Kč)  Musíš si pouze o tuto cenu říct a prokázat sledování na telefonu</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z kuřecích prsou se šunkou a sýrem, hranolky</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Vanilkový pudink s lesním ovocem a šlehačkou</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">bezlep kový</td><td class="menuName">Pečený čokoládový dort s mákem (90% čokoláda), omáčka z lesního ovoce, šlehačka  (bezlepkový) </td><td class="menuPrice">69,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,4l</td><td class="menuName">BOHEMIAN LAGER 11° alk. 4,4% - Pivovar Libertas</td><td class="menuPrice">46,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">COOL grep nealko</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Houba (0,2l červené víno s 0,3l colou a ledem)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName">Vinný střik (0,2l Zweigeltrebe rose / 0,3l sodovka)</td><td class="menuPrice">49,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -124,7 +82,13 @@
 <td>
 <div class="row denni-menu" style="max-width:570px; margin:auto; margin-top:70px;"><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure>
 <script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div></div>
+<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+Volba Sládků<br>
+Kozel tmavý<br>
+Cider Kingswood<br>
+<br>
+Letní zahrada<br>
+Vytápěna zimní zahrada</p><center>--></div></div>
 </td>
 </tr>
 </table>
